--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,154 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    >
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML Form</title>
-    <link rel="stylesheet" href="./style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="form.css">
+    <title>Document</title>
   </head>
   <body>
-    <h1>HTML Form</h1>
-    <script type="text/javascript" src="./main.js"></script>
+    <header>
+
+    </header>
+
+    <main>
+      <form
+        action=
+        "https://mate-academy-form-lesson.herokuapp.com/api"
+        method="post"
+      >
+        <fieldset class="fieldset">
+
+          <legend>Personal information</legend>
+
+          <label class="label">
+            Surname:
+            <input type="text" name="surname">
+          </label>
+
+          <label class="label">
+            Name:
+            <input type="text" name="name" required>
+          </label>
+
+          <label class="label">
+            How old are You?
+            <input
+              type="text"
+              name="age"
+              min="1"
+              max="100"
+              value="12"
+              required
+            >
+          </label>
+
+          <label class="label">
+            Full date of birth:
+            <input type="date" name="birthDate">
+          </label>
+
+          <label class="label">
+            I accept the term of the agreement
+            <input type="checkbox" name="term" required>
+          </label>
+        </fieldset>
+
+        <fieldset class="fieldset">
+
+          <legend>Registration</legend>
+
+          <label class="label">
+            E-mail:
+            <input type="text"
+                  name="email"
+                  placeholder="email@example.com"
+                  required
+            >
+          </label>
+
+          <label class="label">
+            Password:
+            <input type="password"
+                  name="password"
+                  minlength="7"
+                  maxlength="30"
+                  required
+            >
+          </label>
+        </fieldset>
+
+        <fieldset class="fieldset">
+
+          <legend>An interesting fact about you!</legend>
+
+          <label>
+            Do you love cats?
+            <input type="radio" name="cats">
+            Yes
+          </label>
+
+          <label>
+            <input type="radio" name="cats">
+            No
+          </label>
+
+          <label class="label">
+            What is your favourite color?
+            <input type="color" name="color">
+          </label>
+
+          <label class="label">
+            What time do you go to bed?
+            <input type="time" name="timeToBed">
+          </label>
+
+          <label class="label">
+            What are your favorite brand of cars?
+            <select name="car" multiple>
+              <option value="#f00">BMW</option>
+              <option value="#0f0">Audi</option>
+              <option value="#00f">Lada</option>
+            </select>
+          </label>
+
+          <label class="label">
+            How do you rate our work?
+            <input
+              type="range"
+              name="rating"
+              min="1"
+              max="10"
+            >
+          </label>
+        </fieldset>
+
+        <fieldset class="fieldset">
+
+          <legend>Additional info:</legend>
+
+          <label class="label">
+            Comments:
+            <textarea
+              name="comment"
+              cols="17"
+              rows="2"
+            ></textarea>
+          </label>
+
+          <label class="label">
+            Would you recommend us?
+            <select name="recommend">
+              <option value="yes">Yes</option>
+              <option value="no">No</option>
+            </select>
+          </label>
+        </fieldset>
+
+        <button type="submit">Submit</button>
+      </form>
+    </main>
+
   </body>
 </html>
