--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-
-    </header>
-
     <main>
       <form
-        action=
-        "https://mate-academy-form-lesson.herokuapp.com/api"
+        action="https://mate-academy-form-lesson.herokuapp.com/api"
         method="post"
       >
         <fieldset class="fieldset">
@@ -24,12 +19,21 @@
 
           <label class="label">
             Surname:
-            <input type="text" name="surname">
+            <input
+              type="text"
+              name="surname"
+              autocomplete="off"
+            >
           </label>
 
           <label class="label">
             Name:
-            <input type="text" name="name" required>
+            <input
+              type="text"
+              name="name"
+              autocomplete="off"
+              required
+            >
           </label>
 
           <label class="label">
@@ -40,6 +44,7 @@
               min="1"
               max="100"
               value="12"
+              autocomplete="off"
               required
             >
           </label>
@@ -61,20 +66,23 @@
 
           <label class="label">
             E-mail:
-            <input type="text"
-                  name="email"
-                  placeholder="email@example.com"
-                  required
+            <input
+              type="text"
+              name="email"
+              placeholder="email@example.com"
+              autocomplete="off"
+              required
             >
           </label>
 
           <label class="label">
             Password:
-            <input type="password"
-                  name="password"
-                  minlength="7"
-                  maxlength="30"
-                  required
+            <input
+              type="password"
+              name="password"
+              minlength="7"
+              maxlength="30"
+              required
             >
           </label>
         </fieldset>
@@ -107,9 +115,9 @@
           <label class="label">
             What are your favorite brand of cars?
             <select name="car" multiple>
-              <option value="#f00">BMW</option>
-              <option value="#0f0">Audi</option>
-              <option value="#00f">Lada</option>
+              <option value="BMW">BMW</option>
+              <option value="Audi">Audi</option>
+              <option value="Lada">Lada</option>
             </select>
           </label>
 
